--- a/units-of-measurement.html
+++ b/units-of-measurement.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<link rel="stylesheet" href="./reset/reset.css">
-<link rel="stylesheet" href="./reset/units-of-measurement.css">
+<link rel="stylesheet" href="./reset.css">
+<link rel="stylesheet" href="./css/units-of-measurement.css">
 
 <body>
     <header>
