--- a/vector-graphic.html
+++ b/vector-graphic.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./reset/reset.css">
-    <link rel="stylesheet" href="./reset/vector-graphic.css">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./css/vector-graphic.css">
 </head>
 <body>
     <header>
@@ -20,14 +20,15 @@
                 <li><a href="./vector-graphic.html">vector-graphic</a></li>
             </ul>
         </nav>
-       </header>
-       <main>
+       </header>    
+       <main>  
         <svg class="icon">
             <rect width="200" height="150" fill="pink" stroke="green" stroke-width="5px"
            x="40" y="10" rx="40" ry="50">
-           <circle >
-        </svg>
-       
+        <polygon points="430,20 430,200 550,250 550, 70,"
+         fill="green" stroke="black" stroke-width="5" />
+          <line x1="20" y1="50" x2="380" y2="50" stroke="green" stroke-width="16" />
+          </svg>
            </main>
 </body>
 </html>
