--- a/vector-graphic.html
+++ b/vector-graphic.html
@@ -18,6 +18,7 @@
                 <li><a href="./bacgraund.html">bacgraund</a></li>
                 <li><a href="./gradient.html">gradient</a></li>
                 <li><a href="./vector-graphic.html">vector-graphic</a></li>
+                 <li><a href="./position.html">position</a></li>
             </ul>
         </nav>
        </header>    
