--- a/transition.html
+++ b/transition.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./css/position.css">
+    <link rel="stylesheet" href="./css/transition.css">
 </head>
 <body>
     <header>
@@ -21,17 +21,13 @@
                 <li><a href="./position.html">position</a></li>
                 <li><a href="./transition.html">transition</a></li>
                 <li><a href="./07-transform.html">transform</a></li>
-
             </ul>
         </nav>
-       </header>
-       <main>
-        <div class="container">
-            <div class="box1"></div>
-            <div class="box2"></div>
-            <div class="box3"></div>
-            <div class="box4"></div>
-        </div>
-       </main>
+    </header>
+    <main>
+        <section class="">
+            <button class="btn">buy</button>
+        </section>
+    </main>
 </body>
 </html>
