--- a/vector-graphic.html
+++ b/vector-graphic.html
@@ -19,6 +19,8 @@
                 <li><a href="./gradient.html">gradient</a></li>
                 <li><a href="./vector-graphic.html">vector-graphic</a></li>
                  <li><a href="./position.html">position</a></li>
+                <li><a href="./transition.html">transition</a></li>
+                <li><a href="./07-transform.html">transform</a></li>
             </ul>
         </nav>
        </header>    
